almost there; got quiz working; now need to go to highscores

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="start-screen" class="start">
             <h1>Coding Quiz</h1>
             <p>
-                How many questions can you answer correctly in 60 seconds? Submit your high score and try to beat it!
+                How many questions can you answer correctly in 60 seconds? Answer carefully, you will be penalized for incorrect answer, but rewarded for correct! Submit your high score and try to beat it!
             </p>
             <button id="start">Start Quiz</button>
         </div>
