--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Quiz</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css"">
 </head>
 
   <body>
@@ -37,6 +37,6 @@
             </p>
         </div>
     </div>
-    <script src="./js/logic.js"></script>
+    <script src="./assets/js/logic.js"></script>
   </body>
 </html>
